[package]
name = "serde-wasm-bindgen"
version = "0.1.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/serde-wasm-bindgen"
description = "Native Serde adapter for wasm-bindgen"
categories = ["development-tools::ffi", "wasm", "encoding"]
keywords = ["serde", "serialization", "javascript", "wasm", "webassembly"]

[dependencies]
serde = "*"
js-sys = "*"
wasm-bindgen = "*"
fnv = "*"

[dev-dependencies]
wasm-bindgen-test = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
serde_json = "*"

[workspace]
members = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
