[package]
name = "serde-wasm-bindgen"
version = "0.1.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/serde-wasm-bindgen"
description = "Native Serde adapter for wasm-bindgen"
categories = ["development-tools::ffi", "wasm", "encoding"]
keywords = ["serde", "serialization", "javascript", "wasm", "webassembly"]

[dependencies]
serde = "1.0.114"
js-sys = "0.3.42"
wasm-bindgen = "0.2.65"
fnv = "1.0.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.15"
serde = { version = "1.0.114", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.57"

[workspace]
members = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
